[package]
name = "ruck"
version = "0.1.0"
edition = "2021"

[dependencies]

aes-gcm = "0.9.4"
anyhow = "1.0"
blake2 = "0.10.2"
bytes = { version = "1", features = ["serde"] }
bincode = "1.3.3"
clap = { version = "3.0.14", features = ["derive"] }
flate2 = "1.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
spake2 = "0.3.1"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"]}