[package]
name = "ruck"
version = "0.1.0"
edition = "2021"
description = "A croc-inspired tool for hosting relay servers and sending e2e encrypted files."
license = "MIT"
repository = "https://github.com/rictorlome/ruck"

[dependencies]

aes-gcm = "0.9.4"
anyhow = "1.0"
blake2 = "0.10.2"
bytes = { version = "1", features = ["serde"] }
bincode = "1.3.3"
clap = { version = "3.0.14", features = ["derive"] }
flate2 = "1.0"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
spake2 = "0.3.1"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"]}
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }